Fix Chrome bug showing scrollbar track on stroke tip

--- a/src/index.scss
+++ b/src/index.scss
@@ -266,7 +266,7 @@ input:focus::placeholder {
 .overflow-scroll { overflow: scroll; }
 // .overflow-visible { overflow: visible; }
 .overflow-hidden { overflow: hidden; }
-// .overflow-auto { overflow: auto; }
+.overflow-auto { overflow: auto; }
 // .overflow-x-visible { overflow-x: visible; }
 // .overflow-x-hidden { overflow-x: hidden; }
 // .overflow-x-scroll { overflow-x: scroll; }
